--- a/Client-app/src/app/job-footer/job-footer.component.html
+++ b/Client-app/src/app/job-footer/job-footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="page-footer font-small pt-3" style="background-color: #f5f5f5;">
+<footer class="page-footer font-small pt-3" style="background-color: #f5f7fb;">
     <div class="" [ngClass]="{'container':!isMobile,'container-fluid':isMobile}">
       <div *ngIf="isRoot; then thenBlock else elseBlock"></div>
       <ng-template #thenBlock>
