--- a/Client-app/src/app/job-front-box/job-front-box.component.html
+++ b/Client-app/src/app/job-front-box/job-front-box.component.html
@@ -1,7 +1,7 @@
-<div class="" [ngClass]="{'container':!isMobile}">
+<div class="py-5 bg-white" [ngClass]="{'container':!isMobile}">
     <section class="row no-gutters align-items-center">
         <div class="col-12 text-left d-flex">
-            <img class="img-fluid other" src="/assets/frontBox.jpeg" alt="Level Up your career"/> 
+            <img class="img-fluid other makeThemRound" src="/assets/frontBox.jpeg" alt="Level Up your career"/> 
         </div>
         <div class=" position-absolute" [ngClass]="{'w-50':!isMobile,'w-75':isMobile}">
             <div class="text-white h1" style="text-shadow: 2px 2px 2px #767676;font-weight: 600;" [ngStyle]="{'font-size': font}" [ngClass]="{'px-5':!isMobile,'px-2':isMobile}">
