--- a/Client-app/src/app/job-index/job-index.component.html
+++ b/Client-app/src/app/job-index/job-index.component.html
@@ -2,7 +2,6 @@
 <ngx-json-ld [json]="web"></ngx-json-ld>
 <div class="container-fluid" style="padding: 0;">
     <app-job-search></app-job-search>
-    <app-job-featured></app-job-featured>
-    <app-job-top-companies></app-job-top-companies>
+    <app-landing-page></app-landing-page>
     <app-job-front-box [showBtn]="true"></app-job-front-box>
 </div>
