--- a/Client-app/src/app/job-landing-page/job-landing-page.component.html
+++ b/Client-app/src/app/job-landing-page/job-landing-page.component.html
@@ -1,4 +1,4 @@
-<div class="mt-3" [ngClass]="{'container':!isMobile}">
+<!-- <div class="mt-3" [ngClass]="{'container':!isMobile}">
   <div class=" py-5" style="background-color: #F8F9FB;">
     <div class="text-center pb-3 h4 font-weight-bold">Try These Popular Searches</div>
     <div class="row px-3" style="display: flex;justify-content: center;">
@@ -72,4 +72,29 @@
     </div>
   </div>
 </div>
+</div> -->
+<app-landingpage-category></app-landingpage-category>
+<app-landingpage-featured></app-landingpage-featured>
+
+<div class="backgroundSecondary py-5">
+  <div class="container">
+    <div class="h1 text-center pt-4 Weight550">
+      <div>Learn and Grow <span class="blue-color">Professionally</span></div>
+    </div>
+    <div class="row mt-4">
+      <div *ngFor="let k of blogPost" class="curse col-12 col-sm-12 col-md-6 col-lg-4 my-3">
+          <div class="card shadow-sm" [routerLink]="['/advice',k.BlogUrl]">
+              <img class="card-img" src={{urlParseBlog(k.image)}} alt={{k.title}} height="240px">
+              <div class="card-img-overlay"> 
+                  <a [routerLink]="['/career-advice',k.category]" class="btn btn-sm btn-bg">{{k.category}}</a>
+              </div>
+              <div class="card-body">
+                  <h4 class="card-title h5">{{cap(k.title)}}</h4>
+              </div>
+        </div>
+    </div>
+    <div class="horiCenter pt-4">
+      <button class="btn-display btn-bg2" [routerLink]="['/career-advice/All']">View All Blogs</button>
+    </div>
+  </div>
 </div>
