--- a/Client-app/src/app/job-nav/style.css
+++ b/Client-app/src/app/job-nav/style.css
@@ -1,4 +1,44 @@
-.navbar-light { box-shadow: none !important; } 
-.navbar-expand-lg { box-shadow: none !important; } 
-.navbar { box-shadow: none !important; } 
-.sticky-top { box-shadow: none !important; } 
+mdb-navbar {
+    box-shadow: none;
+}
+
+.navbar {
+    box-shadow: none !important; 
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+.blue-color {
+    color: #4440da;
+}
+
+.fontStyle {
+    color: black;
+    font-weight: 400;
+    font-size: 16px;
+}
+
+.fontStyle::after {
+    content: ""; /* This is necessary for the pseudo element to work. */ 
+    display: block; /* This will put the pseudo element on its own line. */
+    margin: 0 auto; /* This will center the border. */
+    width: 50%; /* Change this to whatever width you want. */
+    border-bottom: 2px solid transparent; /* This creates the border. Replace black with whatever color you want. */
+}
+
+.fontStyle:hover {
+    color: #4440da;
+}
+
+.fontStyle:hover::after {
+    content: ""; /* This is necessary for the pseudo element to work. */ 
+    display: block; /* This will put the pseudo element on its own line. */
+    margin: 0 auto; /* This will center the border. */
+    width: 50%; /* Change this to whatever width you want. */
+    border-bottom: 2px solid #4440da; /* This creates the border. Replace black with whatever color you want. */
+}
+
+a {
+    text-decoration: none;
+}
