--- a/Client-app/src/app/job-search/job-search.component.html
+++ b/Client-app/src/app/job-search/job-search.component.html
@@ -1,4 +1,4 @@
-<div class="" [ngClass]="{'container':!isMobile}">
+<!-- <div class="" [ngClass]="{'container':!isMobile}">
     <div class="jumbotron">
         <div class="rounded" [ngClass]="{'mx-5':!isMobile}">
             <h1 class="h1 cate font-weight-bold" [ngClass]="{'ml-2':isMobile,'mt-5':isMobile}" style="margin-top: 9%;">Land The job You've Been Dreaming Of.</h1>
@@ -14,4 +14,12 @@
             </div>
         </div>
     </div>
+</div> -->
+<div class="text-center mb-5">
+    <div class="titleTop">
+        Get the <span class="blue-color">Right Job</span>
+        <div class="pad">You Deserve</div>
+    </div>
+    <h1 style="font-size: 1px;visibility: hidden;">Get The Right Job You Deserve</h1>
+    <p class="text-muted">{{totalJobs}}+ jobs listed here! Your dream job is waiting</p>
 </div>
