Improved Performance and fixed bugs

--- a/Client-app/src/app/job-list/job-list.component.html
+++ b/Client-app/src/app/job-list/job-list.component.html
@@ -47,7 +47,7 @@
                     These tips Might help!
                 </div>
                 <div *ngIf="loaded" class="h5 text-center pb-5">
-                    Try Different keywords, avoid abbreviations, and search in <br> more general area like state or country instead of city!
+                    Try removing some filters, using Different keywords, and search in <br> more general area like state or country instead of city!
                 </div>
                 <div class="text-center py-1">
                     <p>Or Try these Popular Seraches</p>
