--- a/Client-app/src/app/job-nav/job-nav.component.html
+++ b/Client-app/src/app/job-nav/job-nav.component.html
@@ -1,7 +1,7 @@
 <mdb-navbar SideClass="navbar navbar-expand-lg pt-3 navbar-light" [containerInside]="!isMobile">
   <!-- Navbar brand -->
   <mdb-navbar-brand>
-    <a class="ml-auto navbar-brand" href="/">
+    <a class="ml-auto navbar-brand" [routerLink]="['/']">
       <!-- Logo Image -->
       <img src="/assets/workire-logo.svg" title="Home" width="120" alt="Workire" class="d-inline-block align-middle mb-2">
       <!-- Logo Text -->
