--- a/Client-app/src/app/job-landing-page/partner-companies/partner.html
+++ b/Client-app/src/app/job-landing-page/partner-companies/partner.html
@@ -4,7 +4,7 @@
     </div>
     <div class="row" style="display: flex;justify-content: center;">
         <div class="col-4 col-sm-4 col-sm-3 col-md-1 col-lg-1 mb-4" style="display: flex;justify-content: center;" *ngFor="let company of companies">
-            <img class="shad pointer" src={{urlParse(company[1],company[0])}} alt={{company[0]}} style="width: 100%;height: auto;" [routerLink]="['/Job-company',company[0].replace(' ','-')]" />
+            <img class="shad pointer" src={{urlParse(company.logo,company.Name)}} alt={{company.Name}} style="width: 100%;height: auto;" [routerLink]="['/Job-company',company.Name.replace(' ','-')]" />
         </div>
     </div>
 </div>
