--- a/Client-app/src/app/blog-list/blog-list.component.html
+++ b/Client-app/src/app/blog-list/blog-list.component.html
@@ -1,6 +1,6 @@
 <div class="light-bg">
     <div class="text-center">
-        <div class="titleTop">Career advice & Tips</div>
+        <div class="titleTop">Career Advice</div>
         <p class="text-muted text-center py-5">Learn and Grow with Expert Career Advice Tips</p>
     </div>
     <div class="container">
