--- a/Client-app/src/app/career-develpment-tools/career-develpment-tools.component.css
+++ b/Client-app/src/app/career-develpment-tools/career-develpment-tools.component.css
@@ -58,3 +58,11 @@
 .list-group-item {
     background-color: #f5f7fb;
 }
+
+.dark-bg{
+    background-color: #006699;
+}
+
+.white-color {
+    color : white;
+}
