--- a/Client-app/src/app/career-develpment-tools/career-develpment-tools.component.html
+++ b/Client-app/src/app/career-develpment-tools/career-develpment-tools.component.html
@@ -12,10 +12,13 @@
             Professional <br>Career Help
         </div>
         <div class="col-md-9 col-12 text-muted text-left">
-            Workire is here to bring your career dreams into reality. To enable you land your dream job, we provide accurate resume assistance with career resources developed by professional resume writers.
-            A strong resume is the mirror to your career skills and eligibility. To help you take every step on your way to the job you want, Workire has partnered with TopResume, one of the leading Professional resume writing services, to offer special discounted pricing to the professionals who use our site.
-            TopResume's team of Certified Professional Resume Writers have years of experience reviewing resumes. With their Professional resume writing services support, you'll get the resume you need in order to take the next step in your career. You can also avail TopResume’s free resume review in building up the perfect resume for your dream job
-            Since first impression is the best impression, we have associated with My Interview Practice to offer you with online mock interview service. By practicing full-length interviews online, we assure that you can perform the best even in your very first interview. To upgrade your skills, we also collaborate with Udemy to provide you the best courses that would suit your career choice.
+            Bringing your career dreams into reality, Workire enables you land your dream job providing accurate
+            resume assistance by professional resume writers. Partnering with TopResume, one of the leading
+            Professional resume writing services, Workire helps you get the resume you need in order to take the
+            next step in your career along with free resume review. Our association with My Interview Practice
+            offers you with online mock interview service to practice full-length interviews online. To upgrade your
+            skills, we also collaborate with Udemy to provide you the best courses that would suit your career
+            choice.
         </div>
     </div>
 </div>
@@ -186,4 +189,10 @@
     </div>
 </section>
 <app-front-box2></app-front-box2>
+<h1 style="visibility: hidden;display:none">Career Development Tools to Get You Hired</h1>
+<h2 style="visibility: hidden;display:none">Level Up Your Career</h2>
+<h3 style="visibility: hidden;display:none">How strong is your resume?</h3>
+<h3 style="visibility: hidden;display:none">Master the interview & land a job worth loving.</h3>
+<h3 style="visibility: hidden;display:none">Learn New Skills</h3>
+<h3 style="visibility: hidden;display:none">Land your next job, faster.</h3>
 </div>
