--- a/Client-app/src/app/about-us/about-us.component.html
+++ b/Client-app/src/app/about-us/about-us.component.html
@@ -2,14 +2,19 @@
     <div class="container">
         <div class="row py-5" [ngClass]="{'pt-5':!isMobile}">
             <div class="col-md-3 py-3 col-12 text-left h2 font-weight-bold my-auto text-center" style="font-size: xxx-large;">
-                Turning <br> Dreams Into<br>reality
+                A Job-Seeker’s <br> Best <br> Friend
             </div>
             <div class="col-md-9 col-12 text-muted text-left" style="font-size: medium;line-height: 20pt;">
-                Workire is an emerging job site in the Gulf Region, connecting job seekers with potential employers. Launched as a vertical search engine, our website gives regular job updates to our visitors. Latest vacancies are posted every day on the platform for job seekers to grab their dream career opportunity. Our Vision is To provide the job seekers with the best journey to their dream job. And our mission is to become the number one choice of job seekers by connecting people with their dream career opportunities.
+                Workire is an emerging job site in the UK and Gulf Region, connecting job seekers with potential
+                employers by giving regular job updates along with ATS resume builder, professional resume writing
+                service, mock interviews and free resume review. Our vision is to provide the job seekers with the best
+                journey to their dream job. And our mission is to be the number one choice of job seekers by connecting
+                them with their dream career opportunities. By filtering the vacancies only from direct company and
+                verified career websites, we bring job updates from all the major gulf countries and the UK.
                 <br><br>
                 How Workire works? Whether government or private, we bring the vacancy updates from all the employment sectors. Since our website objective is to provide authentic content to our visitors, we filter the list of job opportunities from direct company and other verified career websites.
 
-                Workire enables you to browse jobs easier by job title, skill, company or country. We cover the opportunities from all the major gulf countries including Bahrain, Iraq, Jordan, Kuwait, Qatar, Saudi Arabia and UAE.
+                Workire enables you to browse jobs easier by job title, skill, company or country. We cover the opportunities from United Kingdom and all the major gulf countries including Bahrain, Iraq, Jordan, Kuwait, Qatar, Saudi Arabia and UAE.
             </div>
         </div>
     </div>
