--- a/Client-app/src/app/job-front-box/box.html
+++ b/Client-app/src/app/job-front-box/box.html
@@ -2,8 +2,8 @@
     <div class="dark-bg py-md-5 mx-md-0 mx-1 roundIt row">
         <div class="col-md-10 col-12 row center">
             <div class="col-md-8 col-12">
-                <div class="white-color h3 py-3 pr-md-5 pr-0">Build perfect resume with AI powered system in under 15 minutes</div>
-                <p class="white-color">AI powered keyword optimizations boosts your application while resume assitance features ensures that you get maximum out of your time</p>
+                <div class="white-color h3 py-3 pr-md-5 pr-0">AI Powered ATS Friendly Resume Builder</div>
+                <p class="white-color">ATS friendly resume builder to help the job seeker get the perfect resume for the job hunt.</p>
             </div>
             <div class="col-md-4 col-12 p-5 my-auto text-center">
                 <button mat-button class="btnPrime" [routerLink]="['/building']">Build Your Resume</button>
