--- a/Client-app/src/app/job-landing-page/featured-job/featured.css
+++ b/Client-app/src/app/job-landing-page/featured-job/featured.css
@@ -44,3 +44,22 @@ mat-card img{
     object-fit: cover; /*this makes the image in src fit to the size specified below*/
     border-radius: 0;
 }
+
+.shad:hover{
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition:.5s;
+    box-shadow: 0px 0px 10px gray;
+}
+
+.makeItRound {
+    border-radius: 20px;
+}
+
+.card {
+    padding: 0;
+    margin: 0;
+    width: 100%;
+}
