--- a/Client-app/src/app/job-landing-page/featured-job/featured.html
+++ b/Client-app/src/app/job-landing-page/featured-job/featured.html
@@ -2,7 +2,25 @@
     <div class="h1 text-center py-4 Weight550 pt-5">
         <div><span class="blue-color">Recent </span> Jobs</div>
     </div>
-    <app-job-featured></app-job-featured>
+    <div class="pb-2 row">
+        <div *ngFor="let item of featured; let j = index" class="col-md-4 py-2 col-sm-12 d-flex align-items-stretch">
+          <div class="card makeItRound shad" [routerLink]="['/Job',item.Position]">
+              <div class="row">
+                <div class="col-4">
+                  <img class="d-block pl-3 pt-3 pb-3 w-100" src={{urlParse(item.LogoURL,item.AdvertiserName)}} alt={{item.AdvertiserName}}>
+                </div>
+                <div class="col-8 pt-3">
+                  <div class="card-block">
+                    <div class="d-block font-weight-bold text-dark" style="font-size: small;">{{item.Position}}</div>
+                    <div class="text-muted d-block" style="font-size: small;">{{item.AdvertiserName}}</div>
+                    <div *ngIf="item.Location=='Not Specified'" class="text-muted d-block" style="font-size: small;">{{item.Country}} | {{item.EmploymentType}}</div>
+                    <div *ngIf="item.Location!='Not Specified'"class="text-muted d-block" style="font-size: small;">{{item.Location}} | {{item.EmploymentType}}</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
+      </div>
     <div class="row pb-5">
         <div class="horiCenter pt-4">
             <button class="btn-display btn-bg2" [routerLink]="['/Jobs']">View All Jobs</button>
