--- a/Client-app/src/app/job-landing-page/partner-companies/partner.html
+++ b/Client-app/src/app/job-landing-page/partner-companies/partner.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="text-center h1 pt-5 pb-3">
-        Our <span class="blue-color">Partner </span>Companies
+        Top <span class="blue-color">Hiring </span>Companies
     </div>
     <div class="row" style="display: flex;justify-content: center;">
         <div class="col-4 col-sm-4 col-sm-3 col-md-1 col-lg-1 mb-4" style="display: flex;justify-content: center;" *ngFor="let company of companies">
