--- a/Client-app/src/app/job-nav/job-nav.component.html
+++ b/Client-app/src/app/job-nav/job-nav.component.html
@@ -36,7 +36,7 @@
 
     <!-- Links -->
     <ul class="navbar-nav ml-auto mr-n3 nav-flex-icons">
-        <li class="nav-item">
+        <li class="nav-item mr-2">
           <div class="nav-link">
             <div *ngIf="saved.length!==0" class="btn-group pointer noselect" mdbDropdown>
               <div style="display: flex;" mdbDropdownToggle>
