--- a/Client-app/src/app/job-category/job-category.component.html
+++ b/Client-app/src/app/job-category/job-category.component.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="row pb-5 pt-2">
             <div class="col-md-3 col-6" *ngFor="let team of allCat">
-                <a [routerLink]="['/Job-category',rep(team.SEO_NAME)]">{{team.SEO_NAME}}</a>
+                <a [routerLink]="['/Job-category',team.SEO_NAME]">{{team.SEO_NAME}}</a>
                 <hr class="mt-0">
             </div>
         </div>
