--- a/Client-app/src/app/job-company/job-company.component.html
+++ b/Client-app/src/app/job-company/job-company.component.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row pb-5 pt-2">
             <div class="col-md-4 col-6" *ngFor="let comp of allCat">
-                <a [routerLink]="['/Job-company',rep(comp.AdvertiserName)]">{{comp.AdvertiserName}}</a>
+                <a [routerLink]="['/Job-company',comp.AdvertiserName]">{{comp.AdvertiserName}}</a>
                 <hr class="mt-0">
             </div>
         </div>
