Bugs Fixed and performance improved

--- a/Client-app/src/app/job-redirect/job-one-cat.component.html
+++ b/Client-app/src/app/job-redirect/job-one-cat.component.html
@@ -1,1 +1,1 @@
-<app-job-list *ngIf="hedo.length" [header]="hedo" [payloadFromAbove]="payload" ></app-job-list>
+<!-- <app-job-list *ngIf="hedo.length" [header]="hedo" [payloadFromAbove]="payload" ></app-job-list> -->
