Bugs Fixed and performance improved

--- a/Client-app/src/app/about-us/about-us.component.html
+++ b/Client-app/src/app/about-us/about-us.component.html
@@ -38,7 +38,7 @@
           <br />
           <br />
           <div class="horiCenter pt-4">
-            <button class="btn-display btn-bg2" [routerLink]="['/career-advice/All']">View All Blogs</button>
+            <button class="btn-display btn-bg2" [routerLink]="['/career-advice']">View All Blogs</button>
           </div>
         </div>
     </div>
