--- a/Client-app/src/app/job-side-bar/alertBox/alertbox.html
+++ b/Client-app/src/app/job-side-bar/alertBox/alertbox.html
@@ -1,5 +1,8 @@
 <div class="p-3 bg-alice makeItRound">
-    <div class="font-weight-bold pb-3">Create Job Alert</div>
-    <p class="pb-4">Create Job Alert now and never miss a job!</p>
-    <a mat-button class="dark-bg wid white-color" href="https://www.jobg8alerts.com/Signup.aspx?sid=d080cd68" target="_blank">Create Job Alerts</a>
+    <!-- <div class="font-weight-bold pb-3 text-center">Create Job Alert</div>
+    <p class="pb-2 text-center">Create Job Alert now and never miss a job!</p> -->
+    <div class="pb-3 text-center" style="font-weight: 550;">Get job alerts and never miss a job!</div> 
+    <div class="text-center">
+        <a mat-button class="dark-bg wid white-color" href="https://www.jobg8alerts.com/Signup.aspx?sid=d080cd68" target="_blank">Create Job Alerts</a>
+    </div>
 </div>
