--- a/Client-app/src/app/contact-us/contact-us.component.html
+++ b/Client-app/src/app/contact-us/contact-us.component.html
@@ -3,9 +3,15 @@
         <h1 class="text-center">Contact Us<span class="dot">.</span></h1>
         <p>Drop Us an email at <a href="mailto:info@workire.com" target="_blank">info@workire.com</a> and we'll get back to as soon as possible, Or reach out through social media platforms</p>
         <div class="icons">
-            <a><i class="fa fa-twitter"></i></a>
-            <a><i class="fa fa-youtube-play"></i></a>
-            <a><i class="fa fa-paper-plne"></i></a>
+            <a href='https://www.facebook.com/workire' target="_blank" rel="noopener" class="mr-1">
+                <img class="img-fluid" src="/assets/fb.png" width="20" alt="Workire Facebook Page"/>
+            </a>
+            <a href='https://www.instagram.com/workire.co' target="_blank" rel="noopener" class="mx-2">
+                <img class="img-fluid" src="/assets/insta.png" width="20" alt="Workire Instagram"/>
+            </a>
+            <a href='https://www.linkedin.com/company/workire/' rel="noreferrer" target="_blank" class="mx-2">
+              <img class="img-fluid" src="/assets/in.png" width="20" rel="noopener" alt="Workire LinkedIn"/>
+            </a>
         </div>
     </div>
 </div>
@@ -15,9 +21,15 @@
         <h1>Contact Us<span class="dot">.</span></h1>
         <p>Drop Us an email at <a href="mailto:info@workire.com" target="_blank">info@workire.com</a> and we'll get back to as soon as possible, Or reach out through social media platforms</p>
         <div class="icons">
-            <a><i class="fa fa-twitter"></i></a>
-            <a><i class="fa fa-youtube-play"></i></a>
-            <a><i class="fa fa-paper-pane"></i></a>
+            <a href='https://www.facebook.com/workire' target="_blank" rel="noopener" class="mr-1">
+                <img class="img-fluid" src="/assets/fb.png" width="20" alt="Workire Facebook Page"/>
+            </a>
+            <a href='https://www.instagram.com/workire.co' target="_blank" rel="noopener" class="mx-2">
+                <img class="img-fluid" src="/assets/insta.png" width="20" alt="Workire Instagram"/>
+            </a>
+            <a href='https://www.linkedin.com/company/workire/' rel="noreferrer" target="_blank" class="mx-2">
+              <img class="img-fluid" src="/assets/in.png" width="20" rel="noopener" alt="Workire LinkedIn"/>
+            </a>
         </div>
     </div>
 </div>
