--- a/Client-app/src/app/about-us/about-us.component.html
+++ b/Client-app/src/app/about-us/about-us.component.html
@@ -1,10 +1,10 @@
 <div class="light-bg pt-5">
     <div class="container">
         <div class="row py-5" [ngClass]="{'pt-5':!isMobile}">
-            <div class="col-md-3 py-3 col-12 text-left h2 font-weight-bold my-auto text-center" style="font-size: xxx-large;">
-                A Job-Seeker’s <br> Best <br> Friend
+            <div class="col-md-4 py-3 col-12 text-left h2 font-weight-bold my-auto text-center" style="font-size: xxx-large;">
+                Job-Seeker’s <br> Best Friend
             </div>
-            <div class="col-md-9 col-12 text-muted text-left my-auto" style="font-size: medium;line-height: 20pt;">
+            <div class="col-md-8 col-12 text-muted text-left my-auto" style="font-size: medium;line-height: 20pt;">
                 Workire is an emerging job site in the UK and Gulf Region, connecting job seekers with potential
                 employers by giving regular job updates along with ATS resume builder, professional resume writing
                 service, mock interviews and free resume review. Our vision is to provide the job seekers with the best
