Seo issues fixed

--- a/Client-app/src/app/career-develpment-tools/career-develpment-tools.component.html
+++ b/Client-app/src/app/career-develpment-tools/career-develpment-tools.component.html
@@ -188,7 +188,7 @@
         <a target="_blank" [href]="link4" class="btn dark-bg white-color mt-3">Learn New Skill</a>
     </div>
 </section>
-<app-front-box2></app-front-box2>
+<!-- <app-front-box2></app-front-box2> -->
 <h1 style="visibility: hidden;display:none">Career Development Tools to Get You Hired</h1>
 <h2 style="visibility: hidden;display:none">Level Up Your Career</h2>
 <h3 style="visibility: hidden;display:none">How strong is your resume?</h3>
