--- a/Client-app/src/app/job-footer/job-footer.component.html
+++ b/Client-app/src/app/job-footer/job-footer.component.html
@@ -29,10 +29,10 @@
           <!-- Content -->
           <a href="/">
             <!-- Logo Image -->
-            <img src="/assets/workire-logo.svg" title="Home" width="150" alt="Workire" class="d-inline-block align-middle mb-2" alt="Workire" />
+            <img src="/assets/Workire-jobs-uk-uae-qatar-dubai-london.svg" title="Home" width="150" alt="Workire" class="d-inline-block align-middle mb-2" alt="Workire" />
             <!-- Logo Text -->
           </a>
-          <p class="text-muted">Workire is an emerging job site in the UK and Gulf Region, connecting job seekers with potential employers and provide access to ATS resume builder, career advice and tools. Giving regular job updates, we help job seekers grab their dream career.</p>
+          <p class="text-muted">Workire is a free job site that posts jobs in the UK, UAE, Qatar, Dubai, and London as well as provides access to career advice and development tools.Giving regular job updates, we help job seekers grab their dream career.</p>
           <div class="d-flex-inline mb-3" *ngIf="!isMobile">
             <a href='https://www.facebook.com/workire' rel="noreferrer" target="_blank" class="mr-1">
                 <img class="img-fluid" src="/assets/fb.png" width="20" alt="Workire Facebook Page"/>
