--- a/Client-app/src/app/job-nav/job-nav.component.html
+++ b/Client-app/src/app/job-nav/job-nav.component.html
@@ -3,7 +3,7 @@
   <mdb-navbar-brand>
     <a class="ml-auto navbar-brand" [routerLink]="['/']">
       <!-- Logo Image -->
-      <img src="/assets/workire-logo.svg" title="Home" width="120" alt="Workire" class="d-inline-block align-middle mb-2">
+      <img src="/assets/Workire-jobs-uk-uae-qatar-dubai-london.svg" title="Home" width="120" alt="Workire" class="d-inline-block align-middle mb-2">
       <!-- Logo Text -->
     </a>
   </mdb-navbar-brand>
