minor issues fixed

--- a/Client-app/src/app/job-search/job-search.component.html
+++ b/Client-app/src/app/job-search/job-search.component.html
@@ -4,7 +4,7 @@
         <div class="pad">You <span class="blue-color">Deserve</span></div>
     </div>
     <h1 style="font-size: 1px;visibility: hidden;">Get The Right Job You Deserve</h1>
-    <p class="text-muted">{{totalJobs}}+ jobs listed here! Your dream job is waiting</p>
+    <p class="text-muted">{{totalJobs}}+ Jobs in UK, UAE, London, Dubai, Qatar</p>
 
     <div class="row text-center mt-5" style="display: flex;justify-content: center;">
         <div class="col-lg-6 col-md-8 col-sm-12 col-12">
@@ -40,3 +40,4 @@
         </div>
     </div>
 </div>
+<h1 style="visibility: hidden;display:none">{{totalJobs}}+ Jobs in UK, UAE, London, Dubai, Qatar</h1>
