--- a/Client-app/src/app/job-page/job-page.component.html
+++ b/Client-app/src/app/job-page/job-page.component.html
@@ -92,7 +92,7 @@
             </div>
         </div>
         <div class="col-md-4 col-sm-12">
-            <div class="px-2 py-4">
+            <div class="px-2 py-4" *ngIf="target_feature.length">
                 <div class="text-dark text-left h5" style="font-weight: 500;">
                     People also viewed!
                 </div>
