--- a/Client-app/src/app/job-seo-part/job-seo-part.component.html
+++ b/Client-app/src/app/job-seo-part/job-seo-part.component.html
@@ -1,4 +1,4 @@
-<div class="py-4 px-1" *ngIf="seoObject.length && valid">
+<!-- <div class="py-4 px-1" *ngIf="seoObject.length && valid">
     <div class="py-2 h5">Frequently Asked Questions</div>
     <div *ngFor="let k of seoObject; let i = index">
         <div class="row pointer noselect" (click)="showClick(i)">
@@ -8,4 +8,6 @@
         </div>
         <p *ngIf="k.show" [innerHtml]="k.description" ></p>
     </div>
-</div>
+</div> -->
+<!-- We are not showing FAQs anymore! Login is still there! This component also contains login for meta and title, 
+    so cannot be removed. -->
